Progress till 25-July-2022

--- a/components/global/Nav.module.css
+++ b/components/global/Nav.module.css
@@ -1,3 +1,17 @@
 .navLink {
     text-decoration: none;
 }
+
+.chakra-button:hover {
+    text-decoration: none;
+}
+
+.UserAvatarinner {
+    font-size: 18px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.UserAvatarinner.chakra-button:hover {
+    text-decoration: none;
+}
