--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,19 @@
 .container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  margin: 10% 2rem;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  position: fixed;
+  top: 2%;
+  left: 25%;
+}
+
+.main {
+  height: 100%;
+  padding: 0% 0%;
 }
 
 .footer {
