--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,14 +5,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /*
   overflow: hidden;
   position: fixed;
   top: 2%;
   left: 25%;
+  */
 }
 
 .main {
-  height: 100%;
+  /*height: 100%;*/
   padding: 0% 0%;
 }
 
